--- a/src/_scss/_feed.scss
+++ b/src/_scss/_feed.scss
@@ -22,6 +22,7 @@
 
 			&--info {
 				width: 85%;
+				min-width: 17rem;
 
 				&__excerpt {
 					margin-bottom: 0;
