--- a/src/_scss/_util.scss
+++ b/src/_scss/_util.scss
@@ -4,7 +4,7 @@
 
 .grid {
 	display: grid;
-	grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
+	grid-template-columns: repeat(auto-fill, minmax(16rem, 1fr));
 	gap: $flow4;
 	margin-bottom: $flow2;
 }
